--- a/src/sass/sections/course.scss
+++ b/src/sass/sections/course.scss
@@ -135,7 +135,7 @@
     }
 
     &__icon::before {
-      margin: 0 0 44px 0;
+      margin: 0 auto 44px;
       height: 203px;
       width: 197px;
     }
